StRoot/StarGenerator/UrQMD4_0_0/urqmd.F90


!     end of event loop
         10 continue

      write(6,301)'no. of collisions = ',mc/dble(nevents),' (per event)'
      write(6,301)'final particles   = ',mp/dble(nevents),' (per event)'
      write(6,302)'empty events      : ', noc,noc*1d2/dble(nevents)
 301  format(a19,f8.1,a12)
 302  format(a19,i8,' = ',f5.1,'%')


  end subroutine urqmd_make

  subroutine urqmd_finish
  end subroutine urqmd_finish



  Function address_of_energies() bind(c,name="address_of_energies")
      use iso_c_binding
      Type(C_Ptr) :: address_of_energies
      address_of_energies = c_loc( Ekinbar )
      return
    End Function address_of_energies

    Function address_of_sys() bind(c,name="address_of_sys")
      use iso_c_binding
      Type(C_Ptr) :: address_of_sys
      address_of_sys = c_loc ( npart )
      return
    End Function address_of_sys
      
    Function address_of_rsys() bind(c,name="address_of_rsys")
      use iso_c_binding
      Type(C_Ptr) :: address_of_rsys
      address_of_rsys = c_loc ( time )
      return
    End Function address_of_rsys

    Function address_of_cuts() bind(c,name="address_of_cuts")
      use iso_c_binding
      Type(C_Ptr) :: address_of_cuts
      address_of_cuts = c_loc ( cutmax )
      return
    End Function address_of_cuts

    Function address_of_spdata() bind(c,name="address_of_spdata")
      use iso_c_binding
      type(c_ptr):: address_of_spdata
      address_of_spdata = c_loc ( spx(1) )
      return
    End Function address_of_spdata
    
    Function address_of_isys() bind(c,name="address_of_isys")
      use iso_c_binding
      type(c_ptr):: address_of_isys
      address_of_isys = c_loc ( spin(1) )
      return
    End Function address_of_isys

    Function address_of_coor() bind(c,name="address_of_coor")
      use iso_c_binding
      type(c_ptr)::address_of_coor
      address_of_coor = c_loc ( r0(1) )
      return
    End Function address_of_coor
      
    Function address_of_frag() bind(c,name="address_of_frag")
      use iso_c_binding
      type(c_ptr)::address_of_frag
      address_of_frag = c_loc ( tform(1) )
      return
    End Function address_of_frag
      
    Function address_of_aios() bind(c,name="address_of_aios")
      use iso_c_binding
      type(c_ptr):: address_of_aios
      address_of_aios = c_loc ( airx(1) )
      return
    End Function address_of_aios

    Function address_of_pots() bind(c,name="address_of_pots")
      use iso_c_binding
      type(c_ptr):: address_of_pots
      address_of_pots = c_loc ( Cb0 )
      return
    End Function address_of_pots

    Function address_of_scoor() bind(c,name="address_of_scoor")
      use iso_c_binding
      type(c_ptr):: address_of_scoor
      address_of_scoor = c_loc ( r0s(1) )
      return
    End Function address_of_scoor

    Function address_of_sisys() bind(c,name="address_of_sisys")
      use iso_c_binding
      type(c_ptr)::address_of_sisys
      address_of_sisys = c_loc(sspin(1))
      return
    End Function address_of_sisys

    Function address_of_ssys() bind(c,name="address_of_ssys")
      use iso_c_binding
      type(c_ptr):: address_of_ssys
      address_of_ssys = c_loc ( nspec )
      return
    End Function address_of_ssys

    Function address_of_rtdelay() bind(c,name="address_of_rtdelay")
      use iso_c_binding
      type(c_ptr):: address_of_rtdelay
      address_of_rtdelay = c_loc ( p0td(1,1) )
      return
    End Function address_of_rtdelay

    Function address_of_itdelay() bind(c,name="address_of_itdelay")
      use iso_c_binding
      type(c_ptr):: address_of_itdelay
      address_of_itdelay = c_loc ( ityptd(1,1) )
      return
    End Function address_of_itdelay

    Function address_of_svinfo()  bind(c,name="address_of_svinfo")
      use iso_c_binding
      type(c_ptr):: address_of_svinfo
      address_of_svinfo = c_loc ( itypt(1) )
      return
    End Function address_of_svinfo

    Function address_of_ffermi() bind(c,name="address_of_ffermi")
      use iso_c_binding
      type(c_ptr):: address_of_ffermi
      address_of_ffermi = c_loc ( ffermpx(1) )
      return
    End Function address_of_ffermi

    Function address_of_peq() bind(c,name="address_of_peq")
      use iso_c_binding
      type(c_ptr):: address_of_peq
      address_of_peq = c_loc ( peq1 )
      return
    End Function address_of_peq


END MODULE UrQMDmod


